--- a/static/blur.css
+++ b/static/blur.css
@@ -1,4 +1,4 @@
-@-webkit-keyframes blur-animation {
+@keyframes blur-animation {
   0% {
     -webkit-filter: blur(0px) ;
     -moz-filter: blur(0px);
@@ -17,16 +17,16 @@
 }
 
 html.blur-animation .backgrounds {
-   -webkit-animation-name: blur-animation;
-   -webkit-animation-duration: 1s;
-   -webkit-animation-iteration-count: 1;
-   -webkit-animation-direction: alternate;
-   -webkit-animation-timing-function: ease-out;
-   -webkit-animation-fill-mode: forwards;
-   -webkit-animation-delay: 0s;
+   animation-name: blur-animation;
+   animation-duration: 1s;
+   animation-iteration-count: 1;
+   animation-direction: alternate;
+   animation-timing-function: ease-out;
+   animation-fill-mode: forwards;
+   animation-delay: 0s;
  }
 
- @-webkit-keyframes blur-animation-light {
+ @keyframes blur-animation-light {
   0% {
     -webkit-filter: blur(0px) ;
     -moz-filter: blur(0px);
@@ -45,11 +45,11 @@ html.blur-animation .backgrounds {
 }
 
 html.blur-animation-light .backgrounds {
-   -webkit-animation-name: blur-animation-light;
-   -webkit-animation-duration: 1s;
-   -webkit-animation-iteration-count: 1;
-   -webkit-animation-direction: alternate;
-   -webkit-animation-timing-function: ease-out;
-   -webkit-animation-fill-mode: forwards;
-   -webkit-animation-delay: 0s;
+   animation-name: blur-animation-light;
+   animation-duration: 1s;
+   animation-iteration-count: 1;
+   animation-direction: alternate;
+   animation-timing-function: ease-out;
+   animation-fill-mode: forwards;
+   animation-delay: 0s;
  }
